--- a/content/doc/book/pipeline/syntax.adoc
+++ b/content/doc/book/pipeline/syntax.adoc
@@ -877,7 +877,7 @@ making it an ideal choice for simpler continuous delivery pipelines. Scripted
 provides very few limits, insofar that the only limits on structure and syntax
 tend to be defined by Groovy itself, rather than any Pipeline-specific systems,
 making it an ideal choice for power-users and those with more complex
-requirements. As the name implies, Declarative Pipeline is encourages a
+requirements. As the name implies, Declarative Pipeline encourages a
 declarative programming model.
 footnoteref:[declarative, link:https://en.wikipedia.org/wiki/Declarative_programming[Declarative Programming]]
 Whereas Scripted Pipelines follow a more imperative programming model..
